# OpenCV_Cplus

./: CMakeLists.txt  README.md  TrainingOpenCV.cpp
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
